# ILLI

./: .gitignore  INSTALL.md  LICENSE  README.md  README_v2.md  RUN_APP.bat  SETUP_GUIDE.md  app.py  app_enhanced.py  package.json  pyproject.toml  requirements-core.txt  requirements.txt
.venv_new/: pyvenv.cfg
.venv_new/Scripts/: activate  activate.bat
agents/: __init__.py  orchestrator.py
config/: engine_config.json
control/: __init__.py  control_engine.py
core/: __init__.py  api_server.py  engine.py  llm_interface.py
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
illi/: __init__.py  ai_automation.py  api_server.py  automation.py  browser_agent.py  cli.py  core.py  hotkeys.py  illi_core.py  interface.py  power.py  voice_automation.py  wallpaper.py
memory/: __init__.py  memory_engine.py
plugins/: __init__.py  plugin_system.py
scripts/: __init__.py  init.py  install.py  start.py
security/: __init__.py  security_layer.py
utils/: __init__.py  observability.py
vision/: __init__.py  vision_engine.py
voice/: __init__.py  voice_engine.py
workflows/: __init__.py  workflow_engine.py
