[project]
name = "illi"
version = "0.1.0"
description = "ILLI - Intelligent Local Learning Interface"
authors = [{name = "Farhanillahiclass"}]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
illi = "illi.cli:main"
illi-init = "illi.scripts.init:main"
illi-start = "illi.scripts.start:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
